# docs/swagger.json
@@ -9,7 +9,7 @@
     "basePath": "/",
     "paths": {
         "/test/ping": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -25,6 +25,22 @@
                     "Test"
                 ],
                 "summary": "测试",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "当前页的大小",
+                        "name": "size",
+                        "in": "query"
+                    },
+                    {
+                        "description": "xxx",
+                        "name": "params",
+                        "in": "body",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "测试api成功返回体",
